--- a/src/player/client/static/css/app.css
+++ b/src/player/client/static/css/app.css
@@ -1,6 +1,17 @@
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
+    overflow: auto;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 #content {
@@ -56,10 +67,22 @@ input[type="submit"] {
     top: 0.5em;
 }
 
+#join-status {
+    background-color: #7f1f7f;
+    color: white;
+    font-size: 2vh;
+    font-size: 2vmax;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0.5em 1em;
+}
+
 .big-countdown {
     text-align: center;
-    margin-top: 10vh;
-    margin-top: 10vmax;
+    margin-top: 15vh;
+    margin-top: 15vmax;
     font-size: 20vh;
     font-size: 20vmax;
 }
@@ -114,6 +137,7 @@ button.Blue {
 }
 
 .winner {
+    text-align: center;
     font-size: 8vh;
     font-size: 8vmax;
 }
@@ -124,4 +148,10 @@ button.Blue {
 
 .winner.Blue {
     color: blue;
+}
+
+#top-player {
+    font-size: 6vh;
+    font-size: 6vmax;
+    text-align: center;
 }
