--- a/src/admin/client/static/css/app.css
+++ b/src/admin/client/static/css/app.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
+    background-color: white;
 }
 
 #content {
